--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "livekit-voice-agent"
 version = "0.1.0"
 requires-python = ">=3.12"
 dependencies = [
-    "livekit-agents[groq,google,openai,sarvam,silero,turn-detector]~=1.2",
+    "livekit-agents[cartesia,google,groq,openai,sarvam,silero,turn-detector]~=1.2",
     "livekit-plugins-noise-cancellation~=0.2",
     "python-dotenv>=1.1.1",
 ]
